--- a/package.json
+++ b/package.json
@@ -9,14 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.1",
+    "@tailwindcss/typography": "^0.5.13",
+    "auth0": "^4.4.0",
+    "autoprefixer": "^10.4.19",
+    "fortawesome": "^0.0.1-security",
+    "mongodb": "^6.6.2",
+    "openai-edge-stream": "^2.0.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
+    "sharp": "^0.33.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@tailwindcss/typography": "^0.5.13",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "next": "^14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
