--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.19",
     "fortawesome": "^0.0.1-security",
     "mongodb": "^6.6.2",
+    "openai": "^4.50.0",
     "openai-edge-stream": "^2.0.1",
     "react": "^18",
     "react-dom": "^18.3.1",
