--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,3 @@
 {
-  "extends": ["next", "next/core-web-vitals"],
-  "parser": "@babel/eslint-parser",
-  "parserOptions": {
-    "requireConfigFile": false
-  },
-  "rules": {
-    // Add your custom rules here
-  }
+  "extends": ["next","next/core-web-vitals"]
 }
